Update start-clients.sh